--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <title>Error</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-    >
-</head>
+<%- include('includes/head', { title: 'Error' }) %>
 
-<body class="bg-light">
+
 <div class="container py-5">
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-lg-6">
@@ -34,5 +24,5 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+
+<%- include('includes/foot') %>
